Final HTML structure: header, main, footer, navigation links

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,23 +1,41 @@
-<body>
-    <h1>Welcome to My First Web Page</h1>
-    <p>This is the first paragraph of my web page.</p>
-    <p>HTML stands for HyperText Markup Language and is the foundation of web pages.</p>
-    <h2>About This Project</h2>
-    <p>This is the third paragraph, explaining what I am learning.</p>
-    <h3>My Favorite Resources</h3>
-    <p>Fourth paragraph with links, images, and other fun stuff.</p>
-    
-    <a href="https://www.alx.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
-</body>
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base Index</title>
+    <title>Home Page</title>
 </head>
 <body>
+
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>Welcome to My First Web Page</h1>
+            <p>This is the first paragraph of my web page.</p>
+            <p>HTML stands for HyperText Markup Language and is the foundation of web development.</p>
+            <h2>About This Project</h2>
+            <p>This is the third paragraph, explaining what I am learning.</p>
+            <h3>My Favorite Resources</h3>
+            <p>Fourth paragraph with links, images, and other fun stuff.</p>
+
+            <a href="https://www.alx.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Basma Abichaouki - <a href="https://github.com/Basma162" target="_blank">here</a></p>
+    </footer>
+
 </body>
 </html>
-
