--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,92 +1,3 @@
- <h1>My Favorite Tweet</h1>
-
-    <!-- Embedded Tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-            Just setting up my Twitter. #myfirstTweet
-        </p>&mdash; Twitter (@Twitter)
-        <a href="https://twitter.com/Twitter/status/20">March 21, 2006</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <!-- Link back to homepage -->
-    <p><a href="index.html">Back to Home Page</a></p>nano tweets.html
-nano tweets.html
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,19 +5,34 @@ nano tweets.html
     <title>Tweets Page</title>
 </head>
 <body>
-    <h1>My Favorite Tweet</h1>
 
-    <!-- Embedded Tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-            Just setting up my Twitter. #myfirstTweet
-        </p>&mdash; Twitter (@Twitter)
-        <a href="https://twitter.com/Twitter/status/20">March 21, 2006</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <!-- Link back to homepage -->
-    <p><a href="index.html">Back to Home Page</a></p>
+    <main>
+        <article>
+            <h1>My Favorite Tweet</h1>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>&mdash; Twitter (@Twitter)
+                <a href="https://twitter.com/Twitter/status/20">March 21, 2006</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            
+            <p><a href="index.html">Back to Home Page</a></p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Basma Abichaouki - <a href="https://github.com/Basma162" target="_blank">here</a></p>
+    </footer>
+
 </body>
 </html>
-
